<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.rightster</groupId>
	<artifactId>apollo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>apollo</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium.version>2.41.0</selenium.version>
		<junit.version>4.11</junit.version>
		<junit.fork.count>5</junit.fork.count>
	</properties>

	<profiles>
		<profile>
			<id>windows7-firefox-all</id>
			<properties>
				<browser.name>firefox</browser.name>
				<browser.version>29.0</browser.version>
				<platform.name>windows7</platform.name>
				<cucumber.runner.class>**/*Runner*.class</cucumber.runner.class>
			</properties>
		</profile>
		<profile>
			<id>windows7-chrome-all</id>
			<properties>
				<browser.name>chrome</browser.name>
				<browser.version>29.0</browser.version>
				<platform.name>windows7</platform.name>
				<cucumber.runner.class>**/*Runner*.class</cucumber.runner.class>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.1.6</version>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>0.0.23</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.1.6</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>sax</groupId>
			<artifactId>sax</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.fluttercode.datafactory</groupId>
			<artifactId>datafactory</artifactId>
			<version>0.8</version>
			<type>jar</type>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<executions>
					<execution>
						<id>acceptance-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<forkCount>${junit.fork.count}</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
							<includes>
								<include>${cucumber.runner.class}</include>
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
							<systemProperties>
								<property>
									<name>browser</name>
									<value>${browser.name}</value>
								</property>
								<property>
									<name>version</name>
									<value>${browser.version}</value>
								</property>
								<property>
									<name>platform</name>
									<value>${platform.name}</value>
								</property>
							</systemProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<phase>post-integration-test</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>com.rightster.apollo.reporter.CucumberReporter</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
